# stm32f4-rs

./: Cargo.toml  README.md
.cargo/: config.toml
other/: usb_serial.py
src/: lib.rs  main.rs
src/board/: mod.rs  stm32f4.rs
src/peripherals/: imu.rs  mod.rs  temp.rs
