[package]
name = "stm32f4-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

# Change stm32l4s5vi to your chip name, if necessary.
embassy-stm32 = { version = "0.4.0", path = "../embassy/embassy-stm32", features = [ "defmt", "unstable-pac", "stm32f411ce", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-sync = { version = "0.7.2", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.9.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768", ] }
embassy-embedded-hal = { version = "0.5.0", path = "../embassy/embassy-embedded-hal" }
embassy-usb = { version = "0.5.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-net-adin1110 = { version = "0.3.1", path = "../embassy/embassy-net-adin1110" }
embassy-net = { version = "0.7.1", path = "../embassy/embassy-net", features = ["defmt",  "udp", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-futures = { version = "0.1.2", path = "../embassy/embassy-futures" }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-io = { version = "0.6.0", features = ["defmt-03"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
chrono = { version = "^0.4", default-features = false }
static_cell = "2"

micromath = "2.0.0"

mpu6050 = "0.1.6"

[profile.dev]

[profile.release]
# debug = 2
